--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"><!--app-html--></div>
-    <script type="module" src="/src/entry-client.ts"></script>
+    <script type="module" src="/web/src/entry-client.ts"></script>
     <script>
       window.__INITIAL_STATE__ = '<vuex-state>';
     </script>
